src/public/css/cards.css
.cards{
    opacity: 0;
    position: absolute;
    transition: all 0.3s ease-in-out;
    z-index: 0;
}

.card-1{
    left: 20%;
    opacity: 0.4;
    transform: translateX(-50%);
}

.card-2, .card-4{
    opacity: 0.8;
    z-index: 1;
}

.card-2{
    left: 35%;
    transform: translateX(-50%);
}

.card-3{
    opacity: 1;
    left: 50%;
    transform: translateX(-50%);
    z-index: 2;

    .info
    {
        .button-container
        {
            .button{
                border : solid 2px #9B5DE5;
                border-radius: 9999px;
                display: flex;
                align-items: center;
                height: 24px;

                .text{
                    padding-left: 20px;
                    font-size: xx-small;

                    @media screen and (min-width: 1600px) {
                        font-size: large;
                    }

                    @media screen and (min-width: 1536px) {
                        font-size:  small;
                    }
                }

                .circle
                {
                    display: flex;
                    width: 8px;
                    height: 8px;

                    @media screen and (min-width: 1600px) {
                        width: 24px;
                        height: 24px;
                    }

                    @media screen and (min-width: 1536px) {
                        width: 16px;
                        height: 16px;
                    }
                }

                @media screen and (min-width: 1600px) {
                    border : solid 2px #9B5DE5;
                    border-radius: 9999px;
                    display: flex;
                    align-items: center;
                    height: 48px;
                }

                @media screen and (min-width: 1536px) {
                    border : solid 2px #9B5DE5;
                    border-radius: 9999px;
                    display: flex;
                    align-items: center;
                    height: 32px;
                }
            }    
        }
    }
}

.card-4{
    left: 65%;
    transform: translateX(-50%);
}

.card-5{
    left: 80%;
    opacity: 0.4;
    transform: translateX(-50%);
}

.controller{
    display: flex;
    justify-content: center;
    margin: 25px 0;
    height: 100px;
}

.controller button{
    background: transparent;
    border: 0;
    cursor: pointer;
    font-size: 30px;
    margin: 0 50px;
    padding: 0 12px;
    text-transform: capitalize;
}

.controller button:focus{
    outline: none;
}

.controller-previous{
    position: relative;
}

.controller-previous::before{
    /* border : solid black;
    border-width: 0 5px 5px 0;
    content: '';
    display: inline-block;
    height: 5px; */
    left: -30px;
    /* position: absolute;
    top: 25%; */
    transform: rotate(135deg) translateY(-50%);
    transition: left 0.15s ease-in-out;
    /* width: 5px; */
}

.controller-previous:hover::before{
    left: -40px;
}

.controller-next{
    position: relative;
}

.controller-next::before{
    /* border : solid black;
    border-width: 0 5px 5px 0;
    content: '';
    display: inline-block;
    height: 5px;
    padding: 10px;
    position: absolute; */
    right: -30px;
    top: 45%;
    transform: rotate(-45deg) translateY(-50%);
    transition: right 0.15s ease-in-out;
    /* width: 5px; */
}

.controller-next:hover::before{
    right: -40px;
}

.gallery-nav{
    bottom: -15px;
    display: flex;
    justify-content: center;
    list-style: none;
    padding: 0;
    position: absolute;
    width: 100%;
}

.gallery-nav li{
    background: #fff;
    border-radius: 50%;
    height: 10px;
    margin: 0 16px;
    width: 10px;
}

.gallery-nav li.gallery-item-selected{
    background: #555;
}

/* .circle
{
    background-color: #9B5DE5;
    border-radius: 100%;
    width: 32px;
    height: 32px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: auto;
    margin-right : 8px;
} */

